WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
41717
[EFL] Fix cmake build and libsoup detection
https://bugs.webkit.org/show_bug.cgi?id=41717
Summary
[EFL] Fix cmake build and libsoup detection
Rafael Antognolli
Reported
2010-07-06 15:14:53 PDT
[EFL] Fix cmake build and libsoup detection
Attachments
Patch
(4.51 KB, patch)
2010-07-06 15:20 PDT
,
Rafael Antognolli
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Rafael Antognolli
Comment 1
2010-07-06 15:20:24 PDT
Created
attachment 60656
[details]
Patch
Adam Barth
Comment 2
2010-07-07 03:11:27 PDT
Comment on
attachment 60656
[details]
Patch ok. Looks reasonable.
WebKit Commit Bot
Comment 3
2010-07-07 07:24:03 PDT
Comment on
attachment 60656
[details]
Patch Clearing flags on attachment: 60656 Committed
r62663
: <
http://trac.webkit.org/changeset/62663
>
WebKit Commit Bot
Comment 4
2010-07-07 07:24:08 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug