[EFL] Fix cmake build and libsoup detection Some changes should be done to cmake build system to fix the detection of libsoup and correct some link paths: - LINK_FLAGS should be set using quotes, otherwise some wrong substitution takes place; - we should use LIBSOUP24_* instead of LIBSOUP_* since this is the version we are using; - need to set HAVE_LIBSOUP_2_29_90 if we find a version equal or newer than that. https://bugs.webkit.org/show_bug.cgi?id=41717

Patch by Rafael Antognolli <antognolli@profusion.mobi> on 2010-07-07
Reviewed by Adam Barth.

* cmake/OptionsEfl.cmake:



Canonical link: https://commits.webkit.org/53770@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62878 268f45cc-cd09-0410-ab3c-d52691b4dbfc